Added eras & spinoffs routes to index, Swagger
